# gypsum_dl

./: .black.toml  .coveragerc  .editorconfig  .gitignore  .gitmodules  .isort.cfg  .markdownlint.yaml  .mypy.ini  .pre-commit-config.yaml  .pytest.ini  .ruff.toml  CHANGELOG.md  CHANGELOG_1_1_0.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTOR.md  CONTRIBUTORS.md  LICENSE.md  Makefile  README.md  Untitled.ipynb  align_pdbs.py  conda-lock.yml  crc_mpi_gypsum_out.txt  del_pyc_and_pycache_in_dir.py  environment.yml  json_editor.py  json_mpi_sample_local.json  mkdocs.yml  mpi_gypsum.sh  mpi_sample_molecules.json  output.sdf  paralizerNotes.py  picklefile  picklefiletaut_data  pixi.toml  pyproject.toml  run_gypsum.py  run_gypsum_dl.py  runit.py  (+13 more)
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build.yml  codecov.yml  deploy-docs.yml  docs.yml  linter.yml  tests.yml
data_for_training/: Bin_Substructures.py
data_for_training/1.reaxys_data/: query.how_I_did_it.txt
data_for_training/2.pka_substructures/: notes.txt  substructures.smarts
docs/: .pages  gen_ref_pages.py
docs/css/: base.css  colors.css  jupyter.css  launchy.css  mkdocstrings.css
docs/js/: mathjax-config.js
examples/: run_gypsum_test.sh  sample_molecules.json  sample_molecules.smi
examples/Pitt_CRC/: README.md  mpi_gypsum_dl.sh  mpi_sample_molecules.json  smp_gypsum_dl.sh  smp_sample_molecules.json
examples/Pitt_CRC/tmp/: sample_molecules.json  sample_molecules_multi.json
gypsum/: ChemUtils.py  MolContainer.py  MolObjectHandling.py  MolObjectHandling.py.orig  Multiprocess.py  MyMol.py  Parallelizer.py  Start.py  Utils.py  __init__.py  mp_queue.py  multiprocess_v2.py  parallelizer.py  test.sdf
gypsum/Steps/: __init__.py
gypsum/Steps/IO/: LoadFiles.py  ProcessOutput.py  SaveToPDB.py  SaveToSDF.py  Web2DOutput.py  __init__.py
gypsum/Steps/SMILES/: AddHydrogens.py  DeSaltOrigSmiles.py  EnumerateChiralMols.py  EnumerateDoubleBonds.py  MakeTautomers.py  PrepareSmiles.py  __init__.py  site_structures.smarts
gypsum/Steps/ThreeD/: Convert2DTo3D.py  GenerateAlternate3DNonaromaticRingConfs.py  Minimize3D.py  PrepareThreeD.py  (+1 more)
gypsum/Test/: Tester.py  sample_molecules.json  sample_molecules.smi
gypsum/UnitTests/: MultiprocessorTests.py  UnitTests.py
gypsum_dl/: CHANGES.md  ChemUtils.py  MolContainer.py  MolObjectHandling.py  MyMol.py  Parallelizer.py  Start.py  Utils.py  __init__.py  chem_utils.py  container.py  handlers.py  molecule.py  parallelizer.py  run.py  start.py  utils.py
gypsum_dl/Steps/: __init__.py
gypsum_dl/Test/: Tester.py  sample_molecules.json
gypsum_dl/config/: __init__.py  core.py
gypsum_dl/models/: __init__.py  conformers.py  container.py  molecule.py
gypsum_dl/molvs/: CHANGELOG.md  __init__.py  charge.py  cli.py  errors.py  fragment.py  metal.py  normalize.py  resonance.py  standardize.py  tautomer.py  utils.py  validate.py  validations.py
hooks/: launchy.py
testing_for_patrick/: output.sdf  output.sdf.failed.smi  runit.sh  test.json  test.smi
tests/: conftest.py  test_example.py  test_problematic_smiles.py  test_sample.py
(+71 files in other folders)
