[project]
name = "gypsum_dl"
version = "1.2.1"
description = "Open-source tool to generate 3D-ready small molecules for virtual screening"
authors = [
    {name = "durrantlab", email = "durrantj@pitt.edu"},
]
readme = "README.md"
requires-python = ">=3.10"

# TODO: Keep this here until pixi releases building capabilities
dependencies = [
    "loguru>=0.7.2,<0.8",
    "numpy>=1.2.6,<3",
    "scipy>=1.15.1,<2",
    "rdkit>=2024.9.4,<2026",
    "mpi4py>=4.0.1,<5",
]

[project.scripts]
gypsum-dl = "gypsum_dl.run:main"

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gypsum_dl*"]
