[project]
name = "gypsum_dl"
dynamic = ["version"]
description = "Open-source tool to generate 3D-ready small molecules for virtual screening"
authors = [
    {name = "durrantlab", email = "durrantj@pitt.edu"},
]
readme = "README.md"
requires-python = ">=3.10"

# TODO: Keep this here until pixi releases building capabilities
dependencies = [
    "loguru>=0.7.2,<0.8",
    "numpy>=1.2.6,<3",
    "scipy>=1.15.1,<2",
    "rdkit>=2024.9.4,<2026",
    "mpi4py>=4.0.1,<5",
    "molvs>=0.1.1,<0.2",
]

[project.scripts]
gypsum-dl = "gypsum_dl.run:main"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "wheel"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gypsum_dl*"]

[tool.setuptools_scm]
write_to = "gypsum_dl/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"

