[project]
name = "gypsum_dl"
dynamic = ["version"]
description = "Open-source tool to generate 3D-ready small molecules for virtual screening"
authors = [
    {name = "durrantlab", email = "durrantj@pitt.edu"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
]

# TODO: Keep this here until pixi releases building capabilities
dependencies = [
    "loguru>=0.7.2,<1",
    "numpy>=2.0.0,<3",
    "scipy>=1.15.1,<2",
    "rdkit>=2024.9.4,<2027",
    "mpi4py>=4.0.1,<5",
    "molvs>=0.1.1,<1",
    "dimorphite-dl>=2.0.1,<3",
    "pydantic>=2.0.0,<3",
    "pyyaml>=6.0.0,<7",
]

[project.urls]
Repository = "https://github.com/durrantlab/gypsum_dl"
Issues = "https://github.com/durrantlab/gypsum_dl/issues"
Changelog = "https://github.com/durrantlab/gypsum_dl/blob/main/CHANGELOG.md"


[project.scripts]
gypsum-dl = "gypsum_dl.run:main"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "wheel"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gypsum_dl*"]

[tool.setuptools_scm]
write_to = "gypsum_dl/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"

